hyperdrive (1.1.1) UNRELEASED; urgency=medium

  * Updated Besu, Nethermind, Reth, Prysm, Teku, and Prometheus.
  * Fixed another bug that caused certain commands to hang on single-CPU systems.
  * New global flag: `--itsf` can be used to ignore TX simulation failues and sign / submit TXs anyway, even if they will revert. Do NOT use this unless you know what you're doing and have a good reason.
  * Added `--sbc` and `--slc` to `cs minipool create` which skip node balance and Constellation liquidity checks. Only use this if you intent to sign (but not submit) a TX for manual bundling or submission at a later date when the on-chain conditions become correct.

 -- NodeSet Inc. <info@nodeset.io>  Sat, 26 Oct 2024 08:58:43 +0000

hyperdrive (1.1.0) stable; urgency=medium

  * Improved error handling on nodeset.io requests to provide more information on what's wrong.
  * Increased the task cooldown when the system is not ready yet to 15 seconds.
  * Fixed a bug that erroneously printed log warnings about validators with already-uploaded signed exits not being included when uploading a new signed exit.
  * Added `cs network stats` to view info about the Constellation settings and deposit pool status.
  * `cs minipool create` once again saves the validator pubkey before sending the TX.
  * Fixed the text on `cs minipool exit`.

 -- NodeSet Inc. <info@nodeset.io>  Tue, 15 Oct 2024 21:22:15 +0000

hyperdrive (1.1.0~rc1) unstable; urgency=medium

  * Updated Nethermind, Teku, and MEV-Boost.
  * Signed exit messages are now encrypted locally before being sent to nodeset.io.
  * The CLI now ensures the existence of daemon JWT authentication keys on every command for enhanced backwards compatibility.

 -- NodeSet Inc. <info@nodeset.io>  Tue, 08 Oct 2024 20:31:38 +0000

hyperdrive (1.1.0~b2) unstable; urgency=medium

  * Updated Geth, Reth, and Nimbus.
  * The daemon API servers now require JWT authentication.